*Empty MediaWiki Message*

--- a/Lokótá.mw
+++ b/Lokótá.mw
@@ -9,6 +9,8 @@ voir aussi [[ndingá (monɔkɔ ya mboka)]]
 
 
 ----
+== Comment améliorer? ==
+
 Comment améliorer un article sur une langue?
 * classification linguistique
 * où est-ce qu'on la parle?
@@ -20,6 +22,7 @@ Comment améliorer un article sur une langue?
 >> voir come exemple en anglais: http://en.wikipedia.org/wiki/Lingala_language 
 >> voir come exemple en alémanique: http://als.wikipedia.org/wiki/Lingala
 ----
+== Langues du Congo ==
 Cette liste temporaire vous permet l'accès aux articles suivants pour les créer ou les améliorer. Elle sera effacé le moment donné.
 
 * [[lingála]] 
@@ -29,6 +32,125 @@ Cette liste temporaire vous permet l'accès aux articles suivants pour les crée
 * [[lifalansé]]
 * [[lingɛlɛ́sa]]
 
+
+
+== Langues du monde ==
+* Afrikansi
+*	Belarusi
+*	Bengali
+*	Bork
+*	Breton
+*	Corsican
+*	Elmer Fudd
+*	Guarani
+*	Guyarati
+*	Hihakeri
+*	Interlingua
+*	Kanada
+*	Katalani
+*	Kazakh
+*	Kialemani
+*	Kiamariki
+*	Kiarabi
+*	Kiarmenya
+*	Kiazerbayani
+*	Kibaske
+*	Kibiyari
+*	Kibosinia
+*	Kibulgaria
+*	Kidanemark
+*		Kiengelesi
+*	Kiespanyola
+*	Kiestonia
+*	Kifalama
+*	Kifalansi
+*	Kifarose
+*	Kifelandi
+*	Kifrisi
+*	Kigaeliki
+*	Kigalicia
+*	kigrek
+*	Kihindi
+*	Kikambodia
+*	Kikorea
+*	Kikroasia
+*	Kilabania
+*	Kilatini
+*	Kilatvia
+*	Kilingoni
+*	Kimalasi
+*	Kimalayalami
+*	Kimalta
+*	Kimarati
+*	Kimasedonia
+*		Kindonesi
+*	Kiosita
+*	Kipersi
+*	Kipoloni
+*	Kiportugesa
+*	Kiportugesa (Brazil)
+*	Kipunzabi
+*	Kirlande
+*	Kirumani
+*	Kirusi
+*	Kiserbia
+*	Kisindi
+*	Kisinwazi (kikulutu)
+*	Kisinwazi (ya pepele)
+*	kisipelanto
+*	Kislanda
+*	Kisolovaki
+*	Kisoloveni
+*	Kisomali
+*	Kisundanesi
+*	Kisverge
+*	Kisverige
+*	Kiswahili
+*	Kitagalog
+*		Kitaliano
+*	Kitelugu
+*	kitseki
+*	Kiukrenia
+*	Kiungaria
+*	Kiurdu
+*	Kiusibeki
+*	Kivietnami
+*	Kiwelesi
+*	Kiyapani
+*	Kiyava
+*	Kiyuda
+*	Kizorzi
+*	Kurdish
+*	Kyrgyz
+*	Lingala
+*	Lituani
+*	Mutu Ya Laos
+*	Mutu Ya Mongoli
+*	Nepali
+*	Nynorsk
+*	Oriya
+*	Pashto
+*	Pig Latini
+*		Quechua
+*	Romansh
+*	Serbo-Kroatia
+*	Sesotho
+*	Shona
+*	Sinalese
+*	Tajik
+*	Tamili
+*	Tatar
+*	Thai
+*	Tigirinya
+*	Tonga
+*	Turk
+*	Turkmen
+*	Twi
+*	Uighur
+*	Xhosa
+*	Yiddish
+*	Yoruba
+*	Zulu
 ----
 
 [[Category:Lokótá]]
