*Empty MediaWiki Message*

--- a/Joseph_Kabila.mw
+++ b/Joseph_Kabila.mw
@@ -1,7 +1,7 @@
 [[category:Moto wa politiki (Kongo-Kinshasa)]]
 [[en:Joseph Kabila]][[fr:Joseph Kabila]][[es:Joseph Kabila]][[kg:Joseph Kabila]][[sw:Joseph Kabila]]
 {{ndambo}}
-[[Image:Joseph_Kabila.jpg|270px|thumb|Joseph Kabila]]
+[[Image:Joseph_kabila.jpg|270px|thumb|Joseph Kabila]]
 
 '''Joseph Kabila Kabange''' (abótámi [[1971]]) akomaki mokambi-ekolo [[Kɔ́ngɔ-Kinshasa]] nàkolanda tata wa ye, [[Laurent-Désiré Kabila]], mokambi-ekolo oyo akutaki liwa na loboko wa garde-du-corps waye, na Janvier [[2001]].  Na kimokonzi na ye, azali komeka kosilisa bitumba, mpe kobimisa mapinzo ya bisé mosusu olibanda ekolo Kɔ́ngɔ-Kinshasa. Nàkolanda siniatire ya mokanda ya kimia, bulamatari ya sika, pona eyángeli ekolo pona mbula mibale, ekelamaki na [[2003]], mpe okati wango bakotaki bakambi ya mapinzo mibale ya makasi koleka, oyo basilikelaki bulamatari, to mpe barebɛl; bango bakotaki na kimokonzi lokola bakambi-babale, elongo na moto moko pona parti ya mokambi-ekolo, mpe moto mosusu pona bato oyo bakeseni na politiki ya parti oyo ezali na kimokonzi, kasi baselalaka minduki te (mingi-mingi babengami [[opozision]]). Mokanda ya mibeko-mokonzi to mpe konstitision elobi ete maponeli likosalema liboso ya 30 Yuni ya 2006.
 
