--- a/Ingɛlɛ́tɛlɛ.mw
+++ b/Ingɛlɛ́tɛlɛ.mw
@@ -114,7 +114,7 @@ Les administrations locales sont aussi libres de se servir de langues d'immigré
 
 {{entête tableau charte}}
 |+ '''Fêtes et jours fériés'''
-! Date !! Nom français !! Nom local !! Remarques
+! Date !! Nom Lingalá !! Nom local !! Remarques
 |-
 | {{1er janvier}}
 | Jour de l'an || New Year's Day
