*Empty MediaWiki Message*

--- a/Bacillus_Calmette-Guérin.mw
+++ b/Bacillus_Calmette-Guérin.mw
@@ -1,1 +1,40 @@
-Mobateli ya BCG (BCG vaccine) ezali na biloko oyo epesaka maladi ya [[TB]] kasi basibalongoli makasi na yango. Lokola basibalongoli makasi na yango, ekoki kosala mabe lisusu te, kasi ekosalisa nzoto ya mwana ekolisa komibatela yango moko (immunite), mpo ata soki akutani na TB, akozua yango lisusu te.
+'''Mobateli ya BCG''' (BCG vaccine) ezali na biloko oyo epesaka maladi ya [[TB]] kasi basibalongoli makasi na yango. Lokola basibalongoli makasi na yango, ekoki kosala mabe lisusu te, kasi ekosalisa nzoto ya mwana ekolisa komibatela yango moko (immunite), mpo ata soki akutani na TB, akozua yango lisusu te.
+
+== Mpona nini mwana na ngai bapesa ye BCG? ==
+Na UK, lokola na bamboka misusu, BCG bapesaka na bana baye bazali mpene ya bato oyo bakoki kozala na TB. Wana ezali mpo bana yango bavandaka bisika ya bato mingi ya TB, ezala baboti to bankoko bauti bisika bato mingi babelaka TB. Na mokuse mbala mingi bana oyo bavandaka na cite ya masikini. Mobateli yango bapesaka na tango mwana abotami kasi bakopesaka mpe na tango nyonso oyo ebongi.
+
+== Mwana bapesaka ye mobateli ndenge nini? ==
+Mbala mingi mwana nayo bakobeta ye tonga ya BCG na loboko ya mwasi mpene na lipeka.
+
+== Nkisi yango mpe ekoki kosala mabe? ==
+Tango ozui tonga, mbala moko esika yango ekovimba. Wana elakisaka te babeti tonga ndenge ebongi.
+Sima ya mposo 2 kino 6 wuta kozua tonga, elembo ekomonana. Ekosua mpo na mikolo mike, kasi ebikaka noki soki okangi yango te. Ekoki kotika elembo moke.
+Tango mosusu mwana akozala na pota esika ya tonga. Soki wana ezali kobimisa mayi, kanga yango na elamba ekauki ti ekobanda kolakisa kobika. Kasi kokanga yango na
+sparadrap te. Pota yango ekoki kosala mwa sanza mpo ebanda kobika  '''Soki epesi yo mawa na motema, to omoni lokola pota ezali kobakisama, kende epayi ya [[dokotolo]].'''
+
+== Mpona nini mwana na ngai azua mobateli ya BCG te? ==
+Lokola na mibateli nyonso, tango mususu ebongi te kopesa mwana BCG. Tina yango oyo:
+* Soki mwana azali na nzoto ya moto ([[fievre]])
+* Soki bazali kopesa ye nkisi ya [[kansele]] to nkisi nyonso oyo esukisaka makasi ya nzoto
+* Azali na [[SIDA]], to
+* Azali kobela bisika mingi na loposo [[eczema]].
+
+== Ebongi nayebaka nini lisusu? ==
+Mwana nayo akoki kobanda nkisi ya mibateli ya [[diphtherie]], [[hemophilie]], [[grippe]], [[meningite]], [[pertuse]], paralyse na maladie ekotaka na pota [[tetanus]] soki azali na sanza 2 ekopekisa te kozua BCG. Kasi tala te bankisi misusu wana babeti ye te na loboko oyo babetaki ye na BCG kino sima ya sanza 3, soki te, esika yango ekoki kovimba. Mpe tiya sango ya kozua BCG na buku ya mwana <Personal Child Health Record (PCHR)> mpo esalisa na sima.
+
+== Bamboka oyo ezalaka na babeli mingi ya TB ==
+Bamboka oyo tokoma na nse ezalaka na bato mingi ya TB. Soki eyano na yo ya mituni na biso ezali 'oui' 'íyo', sala noki opesa mwana nayo azua BCG soki azui naino te.
+* Yo, bandeko nayo to tata ya mwana na yo awuti na mboka moko nakati ya oyo totangi na nse?
+* Yo na mwana nayo bokokende kovanda koleka sanza moko to bokotambola mingi na mboka nakati ya oyo totangi na nse?
+* Nakati ya ndako nayo, to mpene nayo, azali moto oyo akozala mpene na mwana nayo na tango mingi, oyo azali na TB to azalaki na yango kala, to awuti na mboka moko nakati ya oyo to tangi?
+
+ Kongo-Brazzaville   Angola    Burundi   Centrafrique
+ Kongo-Kinshasa      Ruanda    Uganda   Gabon
+
+
+== Sango ya kobakisa ==
+Mpo ozua basango misusu na ndenge ya komibatela, bandeko nayo na baninga buzua TB
+te, okokiko betela:
+* dokotolo nayo
+* midwife / femme sage (THIS IS ENGLISH/FRENCH, PLEASE TRANSLATE IF YOU CAN)
+* nurse / infirmière (THIS IS ENGLISH/FRENCH, PLEASE TRANSLATE IF YOU CAN)
