--- a/Bacillus_Calmette-Guérin.mw
+++ b/Bacillus_Calmette-Guérin.mw
@@ -3,6 +3,7 @@
 == Mpona nini mwana na ngai bapesa ye BCG? ==
 Na UK, lokola na bamboka misusu, BCG bapesaka na bana baye bazali mpene ya bato oyo bakoki kozala na TB. Wana ezali mpo bana yango bavandaka bisika ya bato mingi ya TB, ezala baboti to bankoko bauti bisika bato mingi babelaka TB. Na mokuse mbala mingi bana oyo bavandaka na cite ya masikini. Mobateli yango bapesaka na tango mwana abotami kasi bakopesaka mpe na tango nyonso oyo ebongi.
 
+[[Image:Flu Vaccine.jpg|thumb|right|Mbala mingi mwana nayo bakobeta ye tonga ya BCG na loboko ya mwasi mpene na lipeka.]]
 == Mwana bapesaka ye mobateli ndenge nini? ==
 Mbala mingi mwana nayo bakobeta ye tonga ya BCG na loboko ya mwasi mpene na lipeka.
 
