/* Tuberculose ezali nini? */

--- a/Tibélekilosi.mw
+++ b/Tibélekilosi.mw
@@ -8,6 +8,9 @@ meningitis'' . Mpona bato bakolo, mbala mingi ebebisaka esika ya kopomola, kasi 
 kobebisa mpe mikua, nakati ya moto to bisika misusu. Awa na mboka na biso, bato mingi
 baye bazuaka TB babikaka, kasi esengi sanza mingi mpo babika.
 
+TB ezali maladie ya makasi, kasi ebikaka, ewutaka na 'Mycobacterium Tuberculosis' tuberculosis to M. Tb na mokuse). Mbala mingi ekotaka na tolo esika ya kopumola Angle 'pulmonary TB') kasi ekoki mpe kokota bisika misusu na nzoto lokola nakati kingo, mikua to biloko na libumu. Ekoki mpe kopesa meningite.
+Maladie mosusu, M. bovis, ekokani na TB kasi yango ezuaka banyama, mbala mingi gombe ('bovine TB'). M. bovis mpe ekoki kozua moto lokola kala, tango bato bayebaki naino te ndenge ya kobatela mabele <pasteurisation> to koluka TB na gombe.
+
 == Tuberculose moto azuaka ndenge nini? ==
 Nzela oyo monene ya kozua TB nde ewutaka na moto oyo azali na yango na nzoto naye,
 oyo azali kokolola. Soki akololi abimisaka maladie nakati ya soyi. Soki moto ozui soyi yango
