/* Bamboka oyo ezalaka na babeli mingi ya Tuberculose */

--- a/Tibélekilosi.mw
+++ b/Tibélekilosi.mw
@@ -51,3 +51,69 @@ Bamboka oyo tokoma na nse ezalaka na bato mingi ya TB. Soki eyano na yo ya mitun
 * Yo, bandeko nayo to tata ya mwana na yo awuti na mboka moko nakati ya oyo totangi na nse?
 * Yo na mwana nayo bokokende kovanda koleka sanza moko to bokotambola mingi na mboka nakati ya oyo totangi na nse?
 * Nakati ya ndako nayo, to mpene nayo, azali moto oyo akozala mpene na mwana nayo na tango mingi, oyo azali na TB to azalaki na yango kala, to awuti na mboka moko nakati ya oyo to tangi?
+
+== Nzela nini ya koyeba Tuberculose? ==
+Lokola TB ekotaka bisika mingi na nzoto, nzela ya komona yango mpe ezali ndenge na ndenge.
+TB oyo eyebani mingi nde ya kokolola <pulmonary TB>. Moto oyo azali na yango akolakisa:
+* kozanga mposa ya koliya na kokondo
+* kokolola oyo emataka makasi sima ya mposo mine na koleka to basenza
+* kobimisa soyi mingi; akoki mpe kokolola makila soki nzela ya makila epasuki
+* komiyoka nzoto elembi tango nyonso
+* kozala na fievre, mbala mingi na mbutu, oyo epesi kotoko mingi
+
+== TB epanzaka ndenge nini? ==
+Nzela ya kopanza TB yango kaka moko: baye bazali na yango nakati ya tolo to na mongongo. Mayi oyo ebimaka na monoko na kokolola nakati ya mopepe nde ezali na maladie. Kasi oyeba te tango mosusu baoyo bazali na yango bakoki te kopanza yango.
+
+== Kozua TB ezalaka noki, to makasi? ==
+Penza, ezalaka makasi moto azua TB, mpe esengi tango molayi to kokutana mbala mingi na moto oyo azali na yango, lokola kovanda na ndako moko. Ata ndenge wana, basusu, ata soki bazui TB, bango bakobelaka te. Bato mingi (toloba 9 na kati ya 10) baye bazali na nzoto kolongono, soki bazui yango bakobela te. Baye 10% batikali bakobela, kasi mbala mingi noki te, kasi na sima ata ya bambula 10 na koleka (Comstock, 1982).
+Wana esalamaka mpo maladie yango ekoki kovanda na nzoto ya moto lokola elali bambula mpe moto azali kobela te. Maladie ekolamuka na sima ya bambula, mbala mingi soki nzoto ezangi komibatela (immunite), lokola moto mobange, bankisi misusu, kobela lokola [[SIDA]] to kovanda na mizele.
+[
+Mpona 10% baye bakobelaka TB, tango ya mabe ezalaka soki ekomi naino mbula mibale
+te banda bazui yango.
+
+Kati ya 1 na 5% ya baye bazui TB babelaka noki wuta bazui yango (Styblo et al., 1969; Sutherland et al., 1976; 1982). Wana babengaka yango kobela mbala moko, na Angle 'primary disease', mpe mbala mingi ezalaka na bana. 'Primary TB' mbala mingi ekoleka emonana te, mpe ekobika yango moko ata soki moto ameli nkisi te, kasi ekoki kozonga sima ya bambula. Ekotika elembo moke nakati ya tolo, na ndenge emonanaka na Rayon-X.
+
+== Kozua TB na kobela TB bikeseni? ==
+Mpona bato mingi baoyo bakozua TB, [[mobateli|mibateli]] ya nzoto (immunite) ekobunda kino kosilisa
+to kokanga emata te. Ndenge wana maladie ekotikala kolala, kasi ezali naino na bomoyi,
+mpe ekobima lisusu na sima. Ya ndenge oyo babengaka 'latent TB infection'.
+Baye bazali na latent TB infection:
+* emonanaka te
+* bakoyoka kobela te
+* bakoki kopanza na basusu te
+* Mbala mingi soki bameki loposo, ekomonana te bazali na yango
+* Bakoki kobela TB na sima ya bambula
+Baye bazali kobela TB (‘active TB’) bakolakisaka biloko oyo tokomaki na 'Nzela nini ya
+koyeba TB'.
+
+== TB mabe na yango penza nini? == 
+Soki babikisi te, TB, ata epayi ya bakolo, emataka malembe kino eyi koboma. Mabe mosusu ekopesa meningite. Nzela mosusu, soki babikisi te, nde kobimisa makila tango ya kokolola. TB ekokoma ndongo soki emeseni nkisi, mpo ndenge ya kobikisa ezalaka makasi. Nakati ya UK, TB, ebomaka bato 350 na mbula moko, mingi nakati ya bango mibange, kasi bana mpe bazalaka. Bisika bato bavandaka na bandako oyo ekoki te, na mokili mobimba, bato mingi bakufaka na TB koleka oyo ya UK.
+
+== TB bakoki kopekisa na mobateli <vaccination>? ==
+Mobateli ezali ya BCG. Tango mosusu epekisaka TB te. Kasi esalisaka mpona bana baoyo bazali kobela meningite 'TB meningitis' (Rodrigues et al., 1993).
+Nakati ya UK, BCG tango ya kala bazalaki kopesa bana nyonso ya kelasi. Kasi lokola ndenge ya TB ebaluki, UK ekamati nzela ya kolanda bato moke baoyo bakozala na yango. Mobateli ya BCG ekeseni kolanda epayi okozala na UK, mpo TB ekozala mingi esika moko kasi ezali te esika mosusu. BCG bapesaka bana oyo bavandaka bisika ezalaka na bato mingi ya TB koleka bisika misusu, likolo ya oyo, bapesaka na bana babotami na mboka oyo ezali na bato mingi ya TB. Bapesaka mpe na bana kelasi ya mbula 10 kino 14 soki bazui BCG na kala te.
+
+== Soki olingi kokende na mboka mopaya ebongi ozua mobateli ya BCG? ==
+Soki azuaki BCG kala te esengi moto azua yango soki alingi kotambola, kovanda to kosala mosala mpona sanza moko to koleka, na mboka oyo ezalaka na bato mingi ya TB (Immunisation against Infectious Disease, 1996).
+
+== Mobateli ya BCG ezali nini? ==
+[[Mobateli]] ya [[Bacillus Calmette-Guèrin]] (BCG) ezali maladie ya TB oyo ezuaka gombe [[Mycobacterium bovis]]. Nakati ya BCG maladie ya TB ezalaka, kasi bakangi yango epesa kobela te. Kasi mpona baye bazangi mobateli ya nzoto, lokola bato ya  [[SIDA]], mpona bango BCG ekoki kopesa maladie tango mosusu.
+
+BCG batiyaka yango na tonga ya moke na loposo.
+
+== Mpona nini, moto liboso ya kopesa ye BCG, ebongi bameka loposo naye? ==
+Moto nyonso oyo azali na sanza 12 to koleka wana, bakomekaka loposo naye liboso ya kopesa ye [[mobateli ya BCG]]. Wana ezali mpona koyeba soki mobateli ya nzoto (immunite) emeseni na TB. Nzela ya koyeba nde kobeta tonga ya [[tuberculin]] – mayi ya proteine basali wuta na 'M. tuberculosis' – na kati ya loposo. Sima ya mikolo 2 - 10, na ndenge ya tonga yango, bakotala esika babeti yango.
+Soki esika babeti tonga evimbi mpe, ekomi lokola makila, wana elakisi te maladie ezali. Ndenge wana ebongi lisusu te bapesa moto BCG, mpo akozala asiazui TB to maladie mosusu ya ndenge wana. Soki nzoto naye elakisi kozala na maladie ya makasi, wana esengi bameka ye na nzela misusu koyeba soki penza asiazui to abandi kobela TB. Bana oyo bakokisi naino sanza 12 te, bango bazali na posa te ya komeka loposo, liboso ya kozua BCG.
+
+== Tuberculose babikisaka yango ndenge nini? ==
+Mbala mingi TB ekoki kobika, kasi moto ebongi asilisa nkisi ya sanza 6 to koleka. Baye babelaka TB mbala mingi bakotaka na opital te. Ata soki bakoti, wana ekozala mpona koyeba soki penza bazali na maladie yango to mpo babanda kozua nkisi.
+Ata boye, bato ya TB esengi bazala mpene na efimiele ya tolo, tango nyonso ya kozua nkisi mpo bazua yango na ndenge ekoki, mpe soki likambo ya mabe ezali, basala noki moto atika te kozua nkisi.
+
+Nzela oyo tomeseni, ezali ya kozua nkisi 'antibiotics' misatu to mine mbala moko mpona sanza mibale, nde sima na yango nkisi mibale mpona sanza mine misusu. Nkisi mine minene ya TB ezali [[isoniazid]], [[rifampicin]], [[pyrazinamide]] na [[ethambutol]]. Eyaka elongo mpona kosalisa soki maladie emeseni nkisi moko, misusu ebunda. Ata boye, maladie ebandi komesana nkisi ya ndenge nyonso. Mbala mingi nkisi esalaka lisusu te mpo moto azalaki kozua yango na ndenge ekoki te, to azuaki yango na ndenge ya mabe to moto asilisaki te kozua nkisi (Conaty et al., 2004). Mikolo oyo batiyaka nkisi mibale to koleka na kati ya na komprime moko. Moto akomela komprime mine to koleka, mokolo moko. Tango mosusu esengi moto azua nkisi mikolo mingi, lokola maladie ya [[TB meningitis]], to soki maladie ebandi komesana na nkisi moko to mibale, wana esengi kobalula nkisi.
+
+Soki moto abandi nkisi mpona poso mibale, wana akoki lisusu kopanza TB te, mpe akobanda komiyoka malamu sima ya poso mine. Kasi esengi sanza motoba ya kozua nkisi mpo moto abika.
+
+== Tosala nini soki moto azalaka mpene na moto ya TB? ==
+Tango bakuti moto azali na TB, dokotolo akotala soki baye bavandaka naye bakoki kozua yango. Soki emonani te moto akoki kopanza yango, to mwana azali na yango, kasi eyebani te azui yango wapi, wana baye bazalaka mpene naye bakobenga bango mpo bameka eyebana soki bango mpe bazali na yango. Bato wana bakozala bandeko to baye bavandaka na ndako moko. Tango mosusu baninga, lokola baye basalaka elongo, mpe bakobenga bango, kasi mbala mingi tina ya kosala yango ekozala te. Ezalaka mbala mingi te mwana apanza TB – kasi kobela na bango elakisaka te moto mokolo oyo azali kobela TB, azali mpene na mwana wana.
+
+Komeka mpona bandeko tina yango koyeba baye basi bazui TB to baye basi babandi kobela. Komeka basalaka na loposo to na Rayon-X. Na kati ya UK mbala mingi soki bameki loposo, elakisaka te moto asiazui maladie (loposo kovimbal mpe kozala lokola makila esika babetaki tonga), kasi wana ezali mpo bazuaki mobateli ya BCG. Soki loposo  soolo ezali. Soki TB emonani, wana moto bamemi ye na dokotolo mpe bakopesa ye nkisi ya TB.
