/* Tosala nini soki moto azalaka mpene na moto ya TB? */

--- a/Tibélekilosi.mw
+++ b/Tibélekilosi.mw
@@ -116,3 +116,20 @@ Soki moto abandi nkisi mpona poso mibale, wana akoki lisusu kopanza TB te, mpe a
 Tango bakuti moto azali na TB, dokotolo akotala soki baye bavandaka naye bakoki kozua yango. Soki emonani te moto akoki kopanza yango, to mwana azali na yango, kasi eyebani te azui yango wapi, wana baye bazalaka mpene naye bakobenga bango mpo bameka eyebana soki bango mpe bazali na yango. Bato wana bakozala bandeko to baye bavandaka na ndako moko. Tango mosusu baninga, lokola baye basalaka elongo, mpe bakobenga bango, kasi mbala mingi tina ya kosala yango ekozala te. Ezalaka mbala mingi te mwana apanza TB – kasi kobela na bango elakisaka te moto mokolo oyo azali kobela TB, azali mpene na mwana wana.
 
 Komeka mpona bandeko tina yango koyeba baye basi bazui TB to baye basi babandi kobela. Komeka basalaka na loposo to na Rayon-X. Na kati ya UK mbala mingi soki bameki loposo, elakisaka te moto asiazui maladie (loposo kovimbal mpe kozala lokola makila esika babetaki tonga), kasi wana ezali mpo bazuaki mobateli ya BCG. Soki loposo  soolo ezali. Soki TB emonani, wana moto bamemi ye na dokotolo mpe bakopesa ye nkisi ya TB.
+
+== Na mokili mobimba ==
+TB ebomaki bato 100 million na bambula 100 oyo eleki, yango Organisation Mondial de Sante eti yango lokola maladie oyo ya koboma bato mingi na mokili 'Global Health Emergency' na 1993 (WHO 1). Emonani lokola 33% ya bato nyonso na mokili bazali na yango. Na mbula moko, bato 9 million ya sika bazuaka yango (WHO 2). Tango nyonso moto moko azuaka yango na second moko.
+
+Mpona bato mingi ata soki bazui TB mobateli ya nzoto na bango ekoki kokanga yango babela te. Ata boye, TB ebomaka bato 2 million na mokili na mbula moko, moto moko na second 15 (WHO 3). Kati ya bango, 98% bazali bato ya Tiers Monde, mingi na Asie de Sud na Afrika ya bato mwindo (WHO 4).
+
+TB ezali ya liboso mpona koboma basi mpe koleka maladie misusu esalaka bana etike
+bazala mingi.
+
+== Nini bazali kosala mpona kokanga TB na mokili mobimba? ==
+Ebongi bato nyonso na mokili babunda na TB. Kokanga yango esika moko ekosalisa soki bakangi yango bisika misusu.
+WHO eyi na nzela oyo babengaka <Directly Observed Treatment – Shortcourse> (DOTS) (WHO 5):
+1. leta ezala na mposa ya kosalisa
+2. nzela ya komeka bato mpo eyabana soki bazali na TB
+3. nzela oyo ebandimi ya kozua nkisi ya sanza 6 mpona babeli mpe moto ya kotala te bato bazali kozua nkisi na ndenge ebongi
+4. Moto atika te komela nkisi kino abiki, mpe nkisi yango ezala oyo ebongi
+5. Kotiya na buku nzela ekoki ya kozua nkisi mpo na sima eyebana ndenge bapesaki nkisi
