--- a/Tibélekilosi.mw
+++ b/Tibélekilosi.mw
@@ -2,6 +2,7 @@
 
 Buku oyo eyebisaka likolo ya maladie yango, ndenge ya koyeba yango, lobiko na yango, mpe elakisaka ndenge ezali na mboka na biso na kokokisa yango na ndenge ezalaka na mokili mobimba. Buku oyo mpe ezui batoli ya sika mpoya mopekisi ya BCG na UK, mpe babuku misusu na sango oyo nyonso ekosalisa koyeba makambo ya maladi yango na bawebsite.
 
+[[Image:TB AFB smear.jpg|thumb|right|tuberculose]]
 == Tuberculose ezali nini? ==
 '''Tuberculose (TB)''' ezali maladie ya mabe oyo ekoki kovimbisa nakati ya moto ya mwana, na Angle [[TB meningitis]]. Mpona bato bakolo, mbala mingi ebebisaka esika ya kopomola, kasi ekoki
 kobebisa mpe mikua, nakati ya moto to bisika misusu. Awa na mboka na biso, bato mingi
