/* Bamboka oyo ezalaka na babeli mingi ya Tuberculose */

--- a/Tibélekilosi.mw
+++ b/Tibélekilosi.mw
@@ -47,6 +47,7 @@ oyo bavandaka na cite ya masikini. Mobateli yango bapesaka na tango mwana abotam
 bakopesaka mpe na tango nyonso oyo ebongi.
 
 == Bamboka oyo ezalaka na babeli mingi ya Tuberculose ==
+[[Image:Flu Vaccine.jpg|thumb|right|Mbala mingi mwana nayo bakobeta ye tonga ya BCG na loboko ya mwasi mpene na lipeka.]]
 Bamboka oyo tokoma na nse ezalaka na bato mingi ya TB. Soki eyano na yo ya mituni na biso ezali 'oui' 'íyo', sala noki opesa mwana nayo azua [[Mobateli ya BCG|BCG]] soki azui naino te.
 * Yo, bandeko nayo to tata ya mwana na yo awuti na mboka moko nakati ya oyo totangi na nse?
 * Yo na mwana nayo bokokende kovanda koleka sanza moko to bokotambola mingi na mboka nakati ya oyo totangi na nse?
