/* Kozua TB ezalaka noki, to makasi? */

--- a/Tibélekilosi.mw
+++ b/Tibélekilosi.mw
@@ -67,7 +67,7 @@ Nzela ya kopanza TB yango kaka moko: baye bazali na yango nakati ya tolo to na m
 
 == Kozua TB ezalaka noki, to makasi? ==
 Penza, ezalaka makasi moto azua TB, mpe esengi tango molayi to kokutana mbala mingi na moto oyo azali na yango, lokola kovanda na ndako moko. Ata ndenge wana, basusu, ata soki bazui TB, bango bakobelaka te. Bato mingi (toloba 9 na kati ya 10) baye bazali na nzoto kolongono, soki bazui yango bakobela te. Baye 10% batikali bakobela, kasi mbala mingi noki te, kasi na sima ata ya bambula 10 na koleka (Comstock, 1982).
-Wana esalamaka mpo maladie yango ekoki kovanda na nzoto ya moto lokola elali bambula mpe moto azali kobela te. Maladie ekolamuka na sima ya bambula, mbala mingi soki nzoto ezangi komibatela (immunite), lokola moto mobange, bankisi misusu, kobela lokola [[SIDA]] to kovanda na mizele.
+Wana esalamaka mpo maladie yango ekoki kovanda na nzoto ya moto lokola elali bambula mpe moto azali kobela te. Maladie ekolamuka na sima ya bambula, mbala mingi soki nzoto ezangi komibatela (immunite), lokola moto mobange, bankisi misusu, kobela lokola [[Sida]] to kovanda na mizele.
 [
 Mpona 10% baye bakobelaka TB, tango ya mabe ezalaka soki ekomi naino mbula mibale
 te banda bazui yango.
