/* Mobateli ya BCG ezali nini? */

--- a/Tibélekilosi.mw
+++ b/Tibélekilosi.mw
@@ -98,7 +98,7 @@ Nakati ya UK, BCG tango ya kala bazalaki kopesa bana nyonso ya kelasi. Kasi loko
 Soki azuaki BCG kala te esengi moto azua yango soki alingi kotambola, kovanda to kosala mosala mpona sanza moko to koleka, na mboka oyo ezalaka na bato mingi ya TB (Immunisation against Infectious Disease, 1996).
 
 == Mobateli ya BCG ezali nini? ==
-[[Mobateli]] ya [[Bacillus Calmette-Guèrin]] (BCG) ezali maladie ya TB oyo ezuaka gombe [[Mycobacterium bovis]]. Nakati ya BCG maladie ya TB ezalaka, kasi bakangi yango epesa kobela te. Kasi mpona baye bazangi mobateli ya nzoto, lokola bato ya  [[SIDA]], mpona bango BCG ekoki kopesa maladie tango mosusu.
+[[Mobateli]] ya [[Bacillus Calmette-Guèrin]] (BCG) ezali maladie ya TB oyo ezuaka gombe [[Mycobacterium bovis]]. Nakati ya BCG maladie ya TB ezalaka, kasi bakangi yango epesa kobela te. Kasi mpona baye bazangi mobateli ya nzoto, lokola bato ya  [[Sida]], mpona bango BCG ekoki kopesa maladie tango mosusu.
 
 BCG batiyaka yango na tonga ya moke na loposo.
 
