/* Mpona nini mwana na ngai azua mobateli ya BCG te? */

--- a/Bacillus_Calmette-Guérin.mw
+++ b/Bacillus_Calmette-Guérin.mw
@@ -17,7 +17,7 @@ sparadrap te. Pota yango ekoki kosala mwa sanza mpo ebanda kobika  '''Soki epesi
 Lokola na mibateli nyonso, tango mususu ebongi te kopesa mwana BCG. Tina yango oyo:
 * Soki mwana azali na nzoto ya moto ([[fievre]])
 * Soki bazali kopesa ye nkisi ya [[kansele]] to nkisi nyonso oyo esukisaka makasi ya nzoto
-* Azali na [[SIDA]], to
+* Azali na [[Sida]], to
 * Azali kobela bisika mingi na loposo [[eczema]].
 
 == Ebongi nayebaka nini lisusu? ==
