*Empty MediaWiki Message*

--- a/Tibélekilosi.mw
+++ b/Tibélekilosi.mw
@@ -1,12 +1,10 @@
-'''Tuberculose (TB)''' ezali maladie oyo ebebisaka esika ya kopomola nakati ya tolo, kasi ekoki mpe kobebisa bisika misusu na nzoto. Na bambula 150 oyo eleki na UK, moto moko na kati ya bato 8 oyo bazalaki kokufa ezalaki mpo ya TB. Kasi na bambula ya 1980, maladie yango emonanaki mingi lisusu te, mpoya bato kozala na ndako ya malamu, koliya malamu mpe koyeba noki na kotiya pembeni baye bazali kobela mpo bazua lobiko noki. Kasi TB esili naino libela te. Ya soolo, TB ezali maladie enyokoloko mingi mokili mikolo oyo. Mbula oyo eleki batu mingi bakufaki na TB-8,000 na mokolo moko- koleka na bambula nyonso oyo esieleki. Na bambula 20 oyo eleki, TB ebandi komata malembemalembe na UK. Sikoyo bato 7,000 bazuaka yango na mbula moko – wana koloba moto moko na kati ya bato 10,000 na mboka mobimba.
+'''Tuberculose (TB)''' ezali maladie oyo ebebisaka esika ya kopomola nakati ya tolo, kasi ekoki mpe kobebisa bisika misusu na nzoto. Na bambula 150 oyo eleki na  [[Ingɛlɛ́tɛlɛ]], moto moko na kati ya bato 8 oyo bazalaki kokufa ezalaki mpo ya TB. Kasi na bambula ya 1980, maladie yango emonanaki mingi lisusu te, mpoya bato kozala na ndako ya malamu, koliya malamu mpe koyeba noki na kotiya pembeni baye bazali kobela mpo bazua lobiko noki. Kasi TB esili naino libela te. Ya soolo, TB ezali maladie enyokoloko mingi mokili mikolo oyo. Mbula oyo eleki batu mingi bakufaki na TB-8,000 na mokolo moko- koleka na bambula nyonso oyo esieleki. Na bambula 20 oyo eleki, TB ebandi komata malembemalembe na UK. Sikoyo bato 7,000 bazuaka yango na mbula moko – wana koloba moto moko na kati ya bato 10,000 na mboka mobimba.
 
 Buku oyo eyebisaka likolo ya maladie yango, ndenge ya koyeba yango, lobiko na yango, mpe elakisaka ndenge ezali na mboka na biso na kokokisa yango na ndenge ezalaka na mokili mobimba. Buku oyo mpe ezui batoli ya sika mpoya mopekisi ya BCG na UK, mpe babuku misusu na sango oyo nyonso ekosalisa koyeba makambo ya maladi yango na bawebsite.
 
 == Tuberculose ezali nini? ==
 [[Image:TB AFB smear.jpg|thumb|right|tuberculose]]
-'''Tuberculose (TB)''' ezali maladie ya mabe oyo ekoki kovimbisa nakati ya moto ya mwana, na Angle [[TB meningitis]]. Mpona bato bakolo, mbala mingi ebebisaka esika ya kopomola, kasi ekoki
-kobebisa mpe mikua, nakati ya moto to bisika misusu. Awa na mboka na biso, bato mingi
-baye bazuaka TB babikaka, kasi esengi sanza mingi mpo babika.
+'''Tuberculose (TB)''' ezali maladie ya mabe oyo ekoki kovimbisa nakati ya moto ya mwana, na Angle [[TB meningitis]]. Mpona bato bakolo, mbala mingi ebebisaka esika ya kopomola, kasi ekoki kobebisa mpe mikua, nakati ya moto to bisika misusu. Awa na mboka na biso, bato mingi baye bazuaka TB babikaka, kasi esengi sanza mingi mpo babika.
 
 TB ezali maladie ya makasi, kasi ebikaka, ewutaka na 'Mycobacterium Tuberculosis' tuberculosis to M. Tb na mokuse). Mbala mingi ekotaka na tolo esika ya kopumola Angle 'pulmonary TB') kasi ekoki mpe kokota bisika misusu na nzoto lokola nakati kingo, mikua to biloko na libumu. Ekoki mpe kopesa meningite.
 Maladie mosusu, M. bovis, ekokani na TB kasi yango ezuaka banyama, mbala mingi gombe ('bovine TB'). M. bovis mpe ekoki kozua moto lokola kala, tango bato bayebaki naino te ndenge ya kobatela mabele <pasteurisation> to koluka TB na gombe.
@@ -19,7 +17,7 @@ tango molayi kasi wana mbala mingi epesaka maladie te. Nzela oyo monene ezali ka
 ozalaka mpene mpe mpona tango molayi na moto oyo azali na yango.
 
 == Tuberculose ezalaka bisika mingi? == 
-Nakati ya UK na bambula ya 1950, batu koleka 50,000 bazalaki kozua TB na mbula moko.
+Nakati ya  [[Ingɛlɛ́tɛlɛ]] na bambula ya 1950, batu koleka 50,000 bazalaki kozua TB na mbula moko.
 Mikolo oyo ezongi ti batu 7,000 baye bazuaka na mbula moko, kasi soki okokisi yango na
 bambula ya 1990, tango wana ezalaki bato 5,500. Yango okomona te ezali komata lisusu.
 Wana omoni te kozua TB ezali noki te, kasi ebongi ozala ekenge na ndenge ya koyeba
@@ -55,7 +53,7 @@ Bamboka oyo tokoma na nse ezalaka na bato mingi ya TB. Soki eyano na yo ya mitun
 
 == Nzela nini ya koyeba Tuberculose? ==
 Lokola TB ekotaka bisika mingi na nzoto, nzela ya komona yango mpe ezali ndenge na ndenge.
-TB oyo eyebani mingi nde ya kokolola <pulmonary TB>. Moto oyo azali na yango akolakisa:
+TB oyo eyebani mingi nde ya kokolola 'pulmonary TB'. Moto oyo azali na yango akolakisa:
 * kozanga mposa ya koliya na kokondo
 * kokolola oyo emataka makasi sima ya mposo mine na koleka to basenza
 * kobimisa soyi mingi; akoki mpe kokolola makila soki nzela ya makila epasuki
@@ -68,7 +66,7 @@ Nzela ya kopanza TB yango kaka moko: baye bazali na yango nakati ya tolo to na m
 == Kozua TB ezalaka noki, to makasi? ==
 Penza, ezalaka makasi moto azua TB, mpe esengi tango molayi to kokutana mbala mingi na moto oyo azali na yango, lokola kovanda na ndako moko. Ata ndenge wana, basusu, ata soki bazui TB, bango bakobelaka te. Bato mingi (toloba 9 na kati ya 10) baye bazali na nzoto kolongono, soki bazui yango bakobela te. Baye 10% batikali bakobela, kasi mbala mingi noki te, kasi na sima ata ya bambula 10 na koleka (Comstock, 1982).
 Wana esalamaka mpo maladie yango ekoki kovanda na nzoto ya moto lokola elali bambula mpe moto azali kobela te. Maladie ekolamuka na sima ya bambula, mbala mingi soki nzoto ezangi komibatela (immunite), lokola moto mobange, bankisi misusu, kobela lokola [[Sida]] to kovanda na mizele.
-[
+
 Mpona 10% baye bakobelaka TB, tango ya mabe ezalaka soki ekomi naino mbula mibale
 te banda bazui yango.
 
@@ -88,11 +86,11 @@ Baye bazali kobela TB (‘active TB’) bakolakisaka biloko oyo tokomaki na 'Nze
 koyeba TB'.
 
 == TB mabe na yango penza nini? == 
-Soki babikisi te, TB, ata epayi ya bakolo, emataka malembe kino eyi koboma. Mabe mosusu ekopesa meningite. Nzela mosusu, soki babikisi te, nde kobimisa makila tango ya kokolola. TB ekokoma ndongo soki emeseni nkisi, mpo ndenge ya kobikisa ezalaka makasi. Nakati ya UK, TB, ebomaka bato 350 na mbula moko, mingi nakati ya bango mibange, kasi bana mpe bazalaka. Bisika bato bavandaka na bandako oyo ekoki te, na mokili mobimba, bato mingi bakufaka na TB koleka oyo ya UK.
+Soki babikisi te, TB, ata epayi ya bakolo, emataka malembe kino eyi koboma. Mabe mosusu ekopesa meningite. Nzela mosusu, soki babikisi te, nde kobimisa makila tango ya kokolola. TB ekokoma ndongo soki emeseni nkisi, mpo ndenge ya kobikisa ezalaka makasi. Nakati ya [[Ingɛlɛ́tɛlɛ]], TB, ebomaka bato 350 na mbula moko, mingi nakati ya bango mibange, kasi bana mpe bazalaka. Bisika bato bavandaka na bandako oyo ekoki te, na mokili mobimba, bato mingi bakufaka na TB koleka oyo ya UK.
 
 == TB bakoki kopekisa na mobateli <vaccination>? ==
 Mobateli ezali ya BCG. Tango mosusu epekisaka TB te. Kasi esalisaka mpona bana baoyo bazali kobela meningite 'TB meningitis' (Rodrigues et al., 1993).
-Nakati ya UK, BCG tango ya kala bazalaki kopesa bana nyonso ya kelasi. Kasi lokola ndenge ya TB ebaluki, UK ekamati nzela ya kolanda bato moke baoyo bakozala na yango. Mobateli ya BCG ekeseni kolanda epayi okozala na UK, mpo TB ekozala mingi esika moko kasi ezali te esika mosusu. BCG bapesaka bana oyo bavandaka bisika ezalaka na bato mingi ya TB koleka bisika misusu, likolo ya oyo, bapesaka na bana babotami na mboka oyo ezali na bato mingi ya TB. Bapesaka mpe na bana kelasi ya mbula 10 kino 14 soki bazui BCG na kala te.
+Nakati ya Ingɛlɛ́tɛlɛ, BCG tango ya kala bazalaki kopesa bana nyonso ya kelasi. Kasi lokola ndenge ya TB ebaluki, UK ekamati nzela ya kolanda bato moke baoyo bakozala na yango. Mobateli ya BCG ekeseni kolanda epayi okozala na UK, mpo TB ekozala mingi esika moko kasi ezali te esika mosusu. BCG bapesaka bana oyo bavandaka bisika ezalaka na bato mingi ya TB koleka bisika misusu, likolo ya oyo, bapesaka na bana babotami na mboka oyo ezali na bato mingi ya TB. Bapesaka mpe na bana kelasi ya mbula 10 kino 14 soki bazui BCG na kala te.
 
 == Soki olingi kokende na mboka mopaya ebongi ozua mobateli ya BCG? ==
 Soki azuaki BCG kala te esengi moto azua yango soki alingi kotambola, kovanda to kosala mosala mpona sanza moko to koleka, na mboka oyo ezalaka na bato mingi ya TB (Immunisation against Infectious Disease, 1996).
@@ -129,7 +127,7 @@ bazala mingi.
 
 == Nini bazali kosala mpona kokanga TB na mokili mobimba? ==
 Ebongi bato nyonso na mokili babunda na TB. Kokanga yango esika moko ekosalisa soki bakangi yango bisika misusu.
-WHO eyi na nzela oyo babengaka <Directly Observed Treatment – Shortcourse> (DOTS) (WHO 5):
+WHO eyi na nzela oyo babengaka 'Directly Observed Treatment – Shortcourse' (DOTS) (WHO 5):
 1. leta ezala na mposa ya kosalisa
 2. nzela ya komeka bato mpo eyabana soki bazali na TB
 3. nzela oyo ebandimi ya kozua nkisi ya sanza 6 mpona babeli mpe moto ya kotala te bato bazali kozua nkisi na ndenge ebongi
