*Empty MediaWiki Message*

--- a/Bacillus_Calmette-Guérin.mw
+++ b/Bacillus_Calmette-Guérin.mw
@@ -1,7 +1,7 @@
-'''Mobateli ya BCG''' (BCG vaccine) ezali na biloko oyo epesaka maladi ya [[tuberculose]] (TB) kasi basibalongoli makasi na yango. Lokola basibalongoli makasi na yango, ekoki kosala mabe lisusu te, kasi ekosalisa nzoto ya mwana ekolisa komibatela yango moko (immunite), mpo ata soki akutani na TB, akozua yango lisusu te.
+'''Mobateli ya BCG''' ([[Bacillus Calmette-Guèrin]]) ezali na biloko oyo epesaka maladi ya [[tuberculose]] (TB) kasi basibalongoli makasi na yango. Lokola basibalongoli makasi na yango, ekoki kosala mabe lisusu te, kasi ekosalisa nzoto ya mwana ekolisa komibatela yango moko (immunite), mpo ata soki akutani na TB, akozua yango lisusu te.
 
 == Mpona nini mwana na ngai bapesa ye BCG? ==
-Na [[Ingɛlɛ́tɛlɛ]], lokola na bamboka misusu, BCG bapesaka na bana baye bazali mpene ya bato oyo bakoki kozala na TB. Wana ezali mpo bana yango bavandaka bisika ya bato mingi ya TB, ezala baboti to bankoko bauti bisika bato mingi babelaka TB. Na mokuse mbala mingi bana oyo bavandaka na cite ya masikini. Mobateli yango bapesaka na tango mwana abotami kasi bakopesaka mpe na tango nyonso oyo ebongi.
+Na [[Ingɛlɛ́tɛlɛ]], lokola na bamboka misusu, BCG ([[Bacillus Calmette-Guèrin]]) bapesaka na bana baye bazali mpene ya bato oyo bakoki kozala na TB. Wana ezali mpo bana yango bavandaka bisika ya bato mingi ya TB, ezala baboti to bankoko bauti bisika bato mingi babelaka TB. Na mokuse mbala mingi bana oyo bavandaka na cite ya masikini. Mobateli yango bapesaka na tango mwana abotami kasi bakopesaka mpe na tango nyonso oyo ebongi.
 
 [[Image:Flu Vaccine.jpg|thumb|right|Mbala mingi mwana nayo bakobeta ye tonga ya BCG na loboko ya mwasi mpene na lipeka.]]
 
