--- a/Tibélekilosi.mw
+++ b/Tibélekilosi.mw
@@ -38,7 +38,7 @@ tokomi na nse:
 * Kokolola [[makila]]
 
 == Mpona nini mwana na ngai bapesa ye BCG? ==
-Na UK, lokola na bamboka misusu, [[Mobateli ya BCG|BCG]] (Bacillus Calmette-Guèrin) bapesaka na bana baye bazali mpene ya bato oyo
+Na Ingɛlɛ́tɛlɛ, lokola na bamboka misusu, [[Mobateli ya BCG|BCG]] (Bacillus Calmette-Guèrin) bapesaka na bana baye bazali mpene ya bato oyo
 bakoki kozala na TB. Wana ezali mpo bana yango bavandaka bisika ya bato mingi ya TB,
 ezala baboti to bankoko bauti bisika bato mingi babelaka TB. Na mokuse mbala mingi bana
 oyo bavandaka na cite ya masikini. Mobateli yango bapesaka na tango mwana abotami kasi
