/* Bamboka oyo ezalaka na babeli mingi ya TB */

--- a/Bacillus_Calmette-Guérin.mw
+++ b/Bacillus_Calmette-Guérin.mw
@@ -30,23 +30,24 @@ Bamboka oyo tokoma na nse ezalaka na bato mingi ya TB. Soki eyano na yo ya mitun
 * Yo na mwana nayo bokokende kovanda koleka sanza moko to bokotambola mingi na mboka nakati ya oyo totangi na nse?
 * Nakati ya ndako nayo, to mpene nayo, azali moto oyo akozala mpene na mwana nayo na tango mingi, oyo azali na TB to azalaki na yango kala, to awuti na mboka moko nakati ya oyo to tangi?
 
- [[Aljeria]]                                              [[Kamerun]]                           [[Sǎo Tomé na Principe]]         [[Afganistani]]
- [[Al Mamlaká al-Maghribiya]] (Maroc)   [[Kenya]]                                [[Sénégal]]                              [[Djibuti]]   
- [[Angóla]]                                             [[Komori]]                              [[Seyshel]]                              [[India]]
- [[Bê Afríka]] ([[Santrafríka]])                  [[Kɔ́ngɔ-Brazzaville]]              [[Sidafrika]]                           [[Omani]]
- [[Bénin]]                                               [[Kɔ́ngɔ-Kinshasa]]                 [[Sierra Leone]]                 
- [[Botswana]]                                         [[Kotdivuar]] (Cote d'ivoire)     [[Somalie]] 
- [[Burkina Faso]]                                    [[Liberia]]                                [[Swaziland]] 
- [[Burundi]]                                            [[Libîya]]                                 [[Tshad]]
- [[Ejipti]]                                                [[Malawi]]                               [[Togo]] 
- [[Ekwateli]]                                           [[Mali]]                                   [[Tunisia]]
- [[Elitré]]                                               [[Moritani]]                             [[Uganda]]           
- [[Etiopi]]                                              [[Mozambiki]]                         [[Zambia]] 
- [[Gabon]]                                             [[Namibia]]                             [[Zimbabwe]]
- [[Gambia]]                                           [[Niger]] 
- [[Ghana]]                                             [[Nijeria]]
- [[Gine]]                                                [[Rwanda]]
- [[Gine-Bisau]] - [[Gine-Ekwatoliáli]] (Mambénga)                               [[San Salvador (esé)|San Salvador]]
+ [[Aljeria]]                            [[Kamerun]]                       [[Sǎo Tomé na Principe]]         [[Afganistani]]
+ [[Al Mamlaká al-Maghribiya]] (Maroc)   [[Kenya]]                         [[Sénégal]]                       [[Djibuti]]   
+ [[Angóla]]                             [[Komori]]                        [[Seyshel]]                       [[India]]
+ [[Bê Afríka]] ([[Santrafríka]])            [[Kɔ́ngɔ-Brazzaville]]            [[Sidafrika]]                     [[Omani]]
+ [[Bénin]]                              [[Kɔ́ngɔ-Kinshasa]]               [[Sierra Leone]]                 
+ [[Botswana]]                           [[Kotdivuar]] (Cote d'Ivoire)     [[Somalie]] 
+ [[Burkina Faso]]                       [[Liberia]]                       [[Swaziland]] 
+ [[Burundi]]                            [[Libîya]]                        [[Tshad]]
+ [[Ejipti]]                             [[Malawi]]                        [[Togo]] 
+ [[Ekwateli]]                           [[Mali]]                          [[Tunisia]]
+ [[Elitré]]                             [[Moritani]]                      [[Uganda]]           
+ [[Etiopi]]                             [[Mozambiki]]                     [[Zambia]] 
+ [[Gabon]]                              [[Namibia]]                       [[Zimbabwe]]
+ [[Gambia]]                             [[Niger]] 
+ [[Ghana]]                              [[Nijeria]]
+ [[Gine]]                               [[Rwanda]]
+ [[Gine-Bisau]] 
+ [[Gine-Ekwatoliáli]] (Mambénga)                                      [[San Salvador (esé)|San Salvador]]
 
 == Sango ya kobakisa ==
 Mpo ozua basango misusu na ndenge ya komibatela, bandeko nayo na baninga buzua TB
