*Empty MediaWiki Message*

--- a/Mobutu_Sese_Seko.mw
+++ b/Mobutu_Sese_Seko.mw
@@ -1,3 +1,8 @@
 [[category:Moto wa politiki (Kongo-Kinshasa)]]
+[[Category:Kongo Demokratiki (Tata-mokonzi)]]
+
 [[Image:Mobutu.jpg|thumb|Joseph-Désiré Mobutu (-1971) / Mobutu Sese Seko]]
 {{ndámbo}}
+
+
+Category:Kongo Demokratiki (Tata-mokonzi)
