--- a/Joseph_Kabila.mw
+++ b/Joseph_Kabila.mw
@@ -1,4 +1,5 @@
 [[category:Moto wa politiki (Kongo-Kinshasa)]]
+[[Category:Kongo Demokratiki (Tata-mokonzi)]]
 [[en:Joseph Kabila]][[fr:Joseph Kabila]][[es:Joseph Kabila]][[kg:Joseph Kabila]][[sw:Joseph Kabila]]
 {{ndambo}}
 [[Image:Joseph_kabila.jpg|270px|thumb|Joseph Kabila]]
