--- a/Joseph_Kasa-Vubu.mw
+++ b/Joseph_Kasa-Vubu.mw
@@ -5,6 +5,8 @@
 Mokambi Ekolo 01 07 1960 - 24 11 1965
 (Mokambi Bulamatari naye azalaki [[Patrice Lumumba]])
 
+* voir aussi [[Kongo Demokratiki (Tata-mokonzi)]]
+
 [[Category:Kongo Demokratiki (Tata-mokonzi)]]
 
 [[en:Joseph Kasavubu]]
